<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentEnd="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentTop="true">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/church_full_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:text="@string/powell_butte"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/secondary_text" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView3"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/our_mission"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary_text" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView4"
            android:layout_alignStart="@+id/textView4"
            android:layout_below="@+id/textView4"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/mission_statement"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/secondary_text" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView5"
            android:layout_alignStart="@+id/textView5"
            android:layout_below="@+id/textView5"
            android:layout_marginTop="30dp"
            android:text="@string/haggai_1_9_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary_text" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView6"
            android:layout_alignStart="@+id/textView6"
            android:layout_below="@+id/textView6"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/haggai_1_9"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/secondary_text"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView7"
            android:layout_marginTop="30dp"
            android:layout_toEndOf="@+id/imageView2"
            android:layout_toRightOf="@+id/imageView2"
            android:text="@string/services"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary_text" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imageView2"
            android:layout_alignStart="@+id/imageView2"
            android:layout_below="@+id/textView8"
            android:text="@string/service_times"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/secondary_text" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView4"
            android:layout_alignRight="@+id/textView4"
            android:layout_below="@+id/textView9"
            android:layout_marginTop="15dp"
            android:text="@string/location"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary_text" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imageView"
            android:layout_alignStart="@+id/imageView"
            android:layout_below="@+id/textView10"
            android:layout_marginBottom="20dp"
            android:text="@string/church_address"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/secondary_text" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView11"
            android:layout_alignLeft="@+id/textView9"
            android:layout_alignStart="@+id/textView9"
            android:layout_alignTop="@+id/textView10"
            android:layout_toLeftOf="@+id/textView10"
            android:layout_toStartOf="@+id/textView10"
            android:src="@drawable/ic_location" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView9"
            android:layout_alignLeft="@+id/textView7"
            android:layout_alignStart="@+id/textView7"
            android:layout_alignTop="@+id/textView8"
            android:layout_toLeftOf="@+id/textView10"
            android:layout_toStartOf="@+id/textView10"
            android:src="@drawable/ic_clock" />

    </RelativeLayout>
</ScrollView>